--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@ h1 {
     height: 350px;
     width: 450px;
   }
+  .figure-container {
+    fill: transparent;
+    stroke: yellowgreen;
+    stroke-width: 4px;
+    stroke-linecap: round;
+  }
+  
+  .figure-part {
+    display: none;
+  }
