--- a/style.css
+++ b/style.css
@@ -33,3 +33,11 @@ h1 {
   .figure-part {
     display: none;
   }
+  .wrong-letters-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+  }
