--- a/style.css
+++ b/style.css
@@ -41,3 +41,10 @@ h1 {
     flex-direction: column;
     text-align: right;
   }
+  .wrong-letters-container p {
+    margin: 0 0 5px;
+  }
+  .wrong-letters-container span {
+    font-size: 24px;
+  }
+  
