--- a/style.css
+++ b/style.css
@@ -54,4 +54,13 @@ h1 {
     left: 50%;
     transform: translateX(-50%);
   }
-  
+  .letter {
+    border-bottom: 3px solid yellow;
+    display: inline-flex;
+    font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 3px;
+    height: 50px;
+    width: 20px;
+  }
