--- a/style.css
+++ b/style.css
@@ -94,4 +94,11 @@ h1 {
     padding: 12px 20px;
     font-size: 16px;
   }
+  .popup button:active {
+    transform: scale(0.98);
+  }
+  
+  .popup button:focus {
+    outline: 0;
+  }
   
