--- a/style.css
+++ b/style.css
@@ -101,4 +101,12 @@ h1 {
   .popup button:focus {
     outline: 0;
   }
+  .notification-container {
+    background-color: white;
+    border-radius: 10px 10px 0 0;
+    padding: 15px 20px;
+    position: absolute;
+    bottom: -50px;
+    transition: transform 0.3s ease-in-out;
+  }
   
